// @Tag("binding","required")
syntax = "proto3";

package admin;

import "http_config.proto";

option go_package = "gitee.com/ctfang/go-admin/generate/proto/admin";

service AdminUser {
  option (http.RouteGroup) = "admin";

  // 登陆账户信息
  rpc Info(InfoRequest)returns(InfoResponse){
    option (http.Get) = "/info";
  }
}

message InfoRequest{
  // @Tag("json")
  int64 id = 1;
}

message InfoResponse{
  // 名称
  string name = 1; // test
  // 头像
  string avatar = 2;
  // 描述
  string introduction = 3;
  // 角色名称列表
  repeated string roles = 4;
}